--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -2,7 +2,7 @@
 	"navigation": {
 		"home": "홈",
 		"about": "회사소개",
-		"business": "사업영역",
+		"business": "사업분야",
 		"projects": "프로젝트",
 		"contact": "연락처"
 	},
